fix: delete local files uses shutil

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "id": "1cd264e1",
    "metadata": {},
    "outputs": [
@@ -48,15 +48,44 @@
      "text": [
       "416\n",
       "{'PATIENT', 'IMAGE', 'STUDY', 'SERIES'}\n",
-      "(0004,1400) Offset of the Next Directory Record UL: 0\n",
+      "(0004,1400) Offset of the Next Directory Record UL: 6622\n",
       "(0004,1410) Record In-use Flag                  US: 65535\n",
-      "(0004,1420) Offset of Referenced Lower-Level Di UL: 530\n",
-      "(0004,1430) Directory Record Type               CS: 'PATIENT'\n",
+      "(0004,1420) Offset of Referenced Lower-Level Di UL: 0\n",
+      "(0004,1430) Directory Record Type               CS: 'IMAGE'\n",
+      "(0004,1500) Referenced File ID                  CS: ['DICOM', '23022710', '08050000', '71646759']\n",
+      "(0004,1510) Referenced SOP Class UID in File    UI: MR Image Storage\n",
+      "(0004,1511) Referenced SOP Instance UID in File UI: 1.3.12.2.1107.5.2.6.23587.30000023022705114062500001131\n",
+      "(0004,1512) Referenced Transfer Syntax UID in F UI: Explicit VR Little Endian\n",
       "(0008,0005) Specific Character Set              CS: 'ISO_IR 100'\n",
-      "(0010,0010) Patient's Name                      PN: 'Lipatova T.A.'\n",
-      "(0010,0020) Patient ID                          LO: 'l'\n",
-      "(0010,0030) Patient's Birth Date                DA: '19550310'\n",
-      "(0010,0040) Patient's Sex                       CS: 'F'\n"
+      "(0008,0008) Image Type                          CS: ['ORIGINAL', 'PRIMARY', 'M', 'ND']\n",
+      "(0008,0016) SOP Class UID                       UI: MR Image Storage\n",
+      "(0008,0018) SOP Instance UID                    UI: 1.3.12.2.1107.5.2.6.23587.30000023022705114062500001131\n",
+      "(0008,0023) Content Date                        DA: '20230227'\n",
+      "(0008,0033) Content Time                        TM: '093932.406000'\n",
+      "(0020,0013) Instance Number                     IS: '3'\n",
+      "(0020,0032) Image Position (Patient)            DS: [-18, -120, 120]\n",
+      "(0020,0037) Image Orientation (Patient)         DS: [0, 1, 0, 0, 0, -1]\n",
+      "(0020,0052) Frame of Reference UID              UI: 1.3.12.2.1107.5.2.6.23587.20230227093926484.0.0.0\n",
+      "(0028,0010) Rows                                US: 512\n",
+      "(0028,0011) Columns                             US: 512\n",
+      "(0028,0030) Pixel Spacing                       DS: [0.46875, 0.46875]\n",
+      "(0088,0200)  Icon Image Sequence  1 item(s) ---- \n",
+      "   (0028,0002) Samples per Pixel                   US: 1\n",
+      "   (0028,0004) Photometric Interpretation          CS: 'PALETTE COLOR'\n",
+      "   (0028,0010) Rows                                US: 64\n",
+      "   (0028,0011) Columns                             US: 64\n",
+      "   (0028,0100) Bits Allocated                      US: 8\n",
+      "   (0028,0101) Bits Stored                         US: 8\n",
+      "   (0028,0102) High Bit                            US: 7\n",
+      "   (0028,0103) Pixel Representation                US: 0\n",
+      "   (0028,1101) Red Palette Color Lookup Table Desc US: [256, 0, 8]\n",
+      "   (0028,1102) Green Palette Color Lookup Table De US: [256, 0, 8]\n",
+      "   (0028,1103) Blue Palette Color Lookup Table Des US: [256, 0, 8]\n",
+      "   (0028,1201) Red Palette Color Lookup Table Data OW: Array of 256 elements\n",
+      "   (0028,1202) Green Palette Color Lookup Table Da OW: Array of 256 elements\n",
+      "   (0028,1203) Blue Palette Color Lookup Table Dat OW: Array of 256 elements\n",
+      "   (7FE0,0010) Pixel Data                          OW: Array of 4096 elements\n",
+      "   ---------\n"
      ]
     }
    ],
@@ -74,8 +103,9 @@
     "\n",
     "\n",
     "for record in dcom.DirectoryRecordSequence:\n",
-    "    if record.DirectoryRecordType == 'PATIENT':\n",
+    "    if record.DirectoryRecordType == 'IMAGE':\n",
     "        print(record)\n",
+    "        break\n",
     "        # path = os.path.join(*record.ReferencedFileID)\n",
     "        # print(path)"
    ]
@@ -176,6 +206,80 @@
     "im = Image.open('artifacts/MPT_AAA_PNGs/2024/DICOM/PA000000/ST000000/SE000004/IM000001.png')\n",
     "arr = np.asarray(im)\n",
     "arr.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5118bd99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "from typing import Optional\n",
+    "\n",
+    "def check_all_folders_for_dicomdir(cl: yadisk.Client, public_url: str, path: str = ''):\n",
+    "    patients = cl.public_listdir(public_url, path='', sort='name')\n",
+    "    for patient in patients:\n",
+    "        hasdicomdir = search_and_destroy(cl, public_url, patient.path)\n",
+    "        if not hasdicomdir:\n",
+    "            print(f'No DICOMDIR found for patient folder: {patient.path}')\n",
+    "\n",
+    "def search_and_destroy(cl: yadisk.Client, public_url: str, patient: str) -> list:\n",
+    "    \"\"\" Returns a list of paths to all DICOMDIR files found. \"\"\"\n",
+    "    dicomdirs = []\n",
+    "    queue = deque([patient])\n",
+    "    while queue:\n",
+    "        current_path = queue.popleft()\n",
+    "        for item in cl.public_listdir(public_url, path=current_path, sort='name'):\n",
+    "            if item.type == \"dir\":\n",
+    "                # Add subdirectories to the queue\n",
+    "                queue.append(item.path)\n",
+    "            elif item.type == \"file\" and item.name.upper() == 'DICOMDIR':\n",
+    "                dicomdirs.append(item.path)\n",
+    "    return dicomdirs\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a0b315a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No DICOMDIR found for patient folder: /МРТ Архипова ОВ - ранняя БП\n",
+      "No DICOMDIR found for patient folder: /МРТ Вагапов ФА-СК\n",
+      "No DICOMDIR found for patient folder: /МРТ Гаврилова НМ - БП+ЭТ\n",
+      "No DICOMDIR found for patient folder: /МРТ Гатауллин ЗГ-БП (МСАпод вопросом)\n",
+      "No DICOMDIR found for patient folder: /МРТ Гафиатуллина МФ - ЭТ + БП+ХИГМ\n",
+      "No DICOMDIR found for patient folder: /МРТ Ильина НМ - БП\n",
+      "No DICOMDIR found for patient folder: /МРТ Королев СП - БП\n",
+      "No DICOMDIR found for patient folder: /МРТ Садреева ГР - БП\n",
+      "No DICOMDIR found for patient folder: /МРТ Филиппов НВ - БП\n",
+      "No DICOMDIR found for patient folder: /МРТ Шкильменская ЗМ - насл. БП\n"
+     ]
+    },
+    {
+     "ename": "WrongResourceTypeError",
+     "evalue": "'https://disk.yandex.ru/d/INOsQEAaSA8QcA' is a file",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mWrongResourceTypeError\u001b[39m                    Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[65]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcheck_all_folders_for_dicomdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mclient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mhttps://disk.yandex.ru/d/INOsQEAaSA8QcA\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[64]\u001b[39m\u001b[32m, line 7\u001b[39m, in \u001b[36mcheck_all_folders_for_dicomdir\u001b[39m\u001b[34m(cl, public_url, path)\u001b[39m\n\u001b[32m      5\u001b[39m patients = cl.public_listdir(public_url, path=\u001b[33m'\u001b[39m\u001b[33m'\u001b[39m, sort=\u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m patient \u001b[38;5;129;01min\u001b[39;00m patients:\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m     hasdicomdir = \u001b[43msearch_and_destroy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpublic_url\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpatient\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m hasdicomdir:\n\u001b[32m      9\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mNo DICOMDIR found for patient folder: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpatient.path\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[64]\u001b[39m\u001b[32m, line 16\u001b[39m, in \u001b[36msearch_and_destroy\u001b[39m\u001b[34m(cl, public_url, patient)\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m queue:\n\u001b[32m     15\u001b[39m     current_path = queue.popleft()\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mitem\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mcl\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpublic_listdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpublic_url\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcurrent_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msort\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mname\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m     17\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mitem\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtype\u001b[49m\u001b[43m \u001b[49m\u001b[43m==\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdir\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\n\u001b[32m     18\u001b[39m \u001b[43m            \u001b[49m\u001b[38;5;66;43;03m# Add subdirectories to the queue\u001b[39;49;00m\n\u001b[32m     19\u001b[39m \u001b[43m            \u001b[49m\u001b[43mqueue\u001b[49m\u001b[43m.\u001b[49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mitem\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/PycharmProjects/brain_pd_et/.venv/lib/python3.13/site-packages/yadisk/_client.py:137\u001b[39m, in \u001b[36m_listdir\u001b[39m\u001b[34m(get_meta_function, path, max_items, **kwargs)\u001b[39m\n\u001b[32m    134\u001b[39m result = get_meta_function(path, _then=_validate_listdir_response, **kwargs)\n\u001b[32m    136\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m result.type == \u001b[33m\"\u001b[39m\u001b[33mfile\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m--> \u001b[39m\u001b[32m137\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m WrongResourceTypeError(\u001b[33m\"\u001b[39m\u001b[38;5;132;01m%r\u001b[39;00m\u001b[33m is a file\u001b[39m\u001b[33m\"\u001b[39m % (path,))\n\u001b[32m    139\u001b[39m \u001b[38;5;28;01myield from\u001b[39;00m result.embedded.items[:remaining_items]  \u001b[38;5;66;03m# type: ignore[union-attr,index]\u001b[39;00m\n\u001b[32m    141\u001b[39m limit: \u001b[38;5;28mint\u001b[39m = result.embedded.limit  \u001b[38;5;66;03m# type: ignore[assignment,union-attr]\u001b[39;00m\n",
+      "\u001b[31mWrongResourceTypeError\u001b[39m: 'https://disk.yandex.ru/d/INOsQEAaSA8QcA' is a file"
+     ]
+    }
+   ],
+   "source": [
+    "check_all_folders_for_dicomdir(client, os.getenv('SOURCE_PUBLIC_URL'))"
    ]
   }
  ],
