processed first 80 patients

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a523ad05",
    "metadata": {},
    "outputs": [],
@@ -56,18 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "2ebf8d46",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Remaining requests: {'Content-Type': 'application/json; charset=utf-8', 'Yandex-Cloud-Request-ID': 'rest-d1b4ed7bf81cbfca8b513b1baa0b72ed-disk-api-stable-extapi-82', 'Cache-Control': 'no-cache', 'Vary': 'Accept-Encoding', 'Access-Control-Allow-Methods': 'GET, OPTIONS', 'Strict-Transport-Security': 'max-age=31536000; preload', 'Access-Control-Allow-Credentials': 'true', 'Report-To': '{\"group\": \"network-errors\", \"max_age\": 604800, \"endpoints\": [{\"url\": \"https://dr.yandex.net/ya360/nel\", \"priority\": 1}, {\"url\": \"https://dr2.yandex.net/ya360/nel\", \"priority\": 2}]}', 'Content-Encoding': 'gzip', 'NEL': '{\"report_to\": \"network-errors\", \"max_age\": 604800, \"success_fraction\": 0.005, \"failure_fraction\": 0.5}', 'Date': 'Thu, 08 Jan 2026 15:24:57 GMT', 'Access-Control-Allow-Origin': '*', 'Transfer-Encoding': 'chunked', 'Access-Control-Allow-Headers': 'X-Uid, Authorization, X-Requested-With, X-HTTP-Method, Accept, Accept-Language, X-Borigin, Content-Type'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "\n",
@@ -88,6 +80,90 @@
     "token = YA_TOKEN\n",
     "rate_info = check_yandex_rate_limits(token)\n",
     "print(f\"Remaining requests: {rate_info}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e82e281",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "pt = os.path.join(os.getcwd(), 'artifacts/Загрузки/MRT_PNGs')\n",
+    "\n",
+    "df = pd.read_csv(os.path.join(pt, 'metadata.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c50af9f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: detect duplicates but don't remove them\n",
+    "# Identify duplicates based on sop_instance_uid (unique identifier for each DICOM file)\n",
+    "print('Total', df.size)\n",
+    "duplicates = df.duplicated(subset=['sop_instance_uid'], keep=False)\n",
+    "print(f\"Total duplicate rows: {duplicates.sum()}\")\n",
+    "print(f\"Unique duplicate groups: {df[duplicates]['sop_instance_uid'].nunique()}\")\n",
+    "print(\"\\nDuplicate rows:\")\n",
+    "df[duplicates][['patient_folder', 'status']].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39fa6660",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered = df[df['patient_folder'] == 'МРТ Галимова ХБ - БП']\n",
+    "filtered['number_of_frames'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cfd1f57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df['status'] == 'ERROR']['error'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "438bf9ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the errors here only contains error = Non PixelData in DICOM which is OK\n",
+    "df = df[df['status'] == 'OK']\n",
+    "print(df.count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3eb1a24b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['number_of_frames'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8da7ad4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: display images from one series for any of the patient in grid, so that the brain images are visible in notebook\n",
+    "print(df['series_description'].value_counts())"
    ]
   }
  ],
